# anonymize-pseudo-ids

./: LICENSE.md  README
python/: Dockerfile  anon_ids.py  generate_new_dp_ids.py  generate_new_pf_ids.py  main.py  pyproject.toml  utils.py
python/prm/: id_mapping.json  new_data.json  original.json
python/prm/incisive2-anon/breast/dp1/data/953-792004/953-792004_CT/Series-1/: 1-01.dcm  1-02.dcm  1-03.dcm  1-04.dcm  1-05.dcm  1-06.dcm  1-07.dcm  1-08.dcm  1-09.dcm  1-10.dcm  1-11.dcm  1-12.dcm  1-13.dcm  1-14.dcm  1-15.dcm  1-16.dcm  1-17.dcm  1-18.dcm  1-19.dcm  1-20.dcm  1-21.dcm  1-22.dcm  1-23.dcm  1-24.dcm  1-25.dcm  1-26.dcm  1-27.dcm  1-28.dcm  1-29.dcm  1-30.dcm  1-31.dcm  1-32.dcm  1-33.dcm  1-34.dcm  1-35.dcm  1-36.dcm  1-37.dcm  1-38.dcm  1-39.dcm  1-40.dcm  (+24 more)
python/prm/incisive2-anon/breast/dp2/data/572-646658/572-646658_CT/Series-1/: 1-01.dcm  1-02.dcm  1-03.dcm  1-04.dcm  1-05.dcm  1-06.dcm  1-07.dcm  1-08.dcm  1-09.dcm  1-10.dcm  1-11.dcm  1-12.dcm  1-13.dcm  1-14.dcm  1-15.dcm  1-16.dcm  1-17.dcm  1-18.dcm  1-19.dcm  1-20.dcm  1-21.dcm  1-22.dcm  1-23.dcm  1-24.dcm  1-25.dcm  1-26.dcm  (+38 more)
python/prm/incisive2-anon/colorectal/dp1/data/: id_mapping_colorectal.json
python/prm/incisive2-anon/lung/dp1/data/: id_mapping_lung.json
python/prm/incisive2-anon/prostate/dp2/data/: id_mapping_prostate.json
python/prm/incisive2/breast/dp1/data/: id_mapping_breast.json
python/prm/incisive2/breast/dp2/data/: id_mapping_breast.json
python/prm/incisive2/lung/dp2/data/: id_mapping_lung.json
python/prm/incisive2/prostate/dp1/data/: id_mapping_prostate.json
(+387 files in other folders)
