[project]
dependencies = [
  "fire==0.6.0",
  "pydicom==2.4.4",
  "tqdm==4.66.4"
]
name = "anonymize-pseudo-ids"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.5.3",
  "djlint==1.34.1",
  "mypy==1.10.0",
  "ruff==0.4.7",
  "ssort==0.13.0",
  "toml-sort==0.23.1"
]

[project.scripts]
anonymize_pseudo_ids = "main:main_cli"

[tool.setuptools]
py-modules = ["main"]
